--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
   "presets": ["babel-preset-expo"],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd-mobile"
+      }
+    ]
+  ],
   "env": {
     "development": {
       "plugins": ["transform-react-jsx-source"]
