--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-plugin-import": "^1.7.0",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
@@ -19,6 +20,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "antd-mobile": "^2.1.8",
     "expo": "^26.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
