--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {
     "babel-plugin-import": "^1.7.0",
-    "jest-expo": "25.0.0",
+    "jest-expo": "^26.0.0",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0"
   },
@@ -22,8 +22,8 @@
   "dependencies": {
     "antd-mobile": "^2.1.8",
     "expo": "^26.0.0",
-    "react": "16.2.0",
-    "react-native": "0.52.0",
-    "react-navigation": "^1.0.3"
+    "react": "16.3.0-alpha.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "react-navigation": "1.5.8"
   }
 }
